--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
      </header>
      <main>
       <h1> Enzo Ken</h1>
-      <h2> Desenvolvedor Web</h2>
+      <h2> Desenvolvedo Web</h2>
       <h3> (em treinamento)</h3>
 
       <img src="../IMG/html.png"  alt="" > 
