--- a/contatos.html
+++ b/contatos.html
@@ -10,12 +10,8 @@
     <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
-    <header>
-        <nav>
-    <a href="index.html">inicio</a>
-    <a href="projetos.html">Projetos</a>
-    <a href="contatos.html">Contato</a>
-        </nav>
+    <header id="headerId">
+       
 
      </header>
      <main>
