--- a/projetos.html
+++ b/projetos.html
@@ -10,14 +10,10 @@
     <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
-    <header>
-        <nav>
-    <a href="index.html">inicio</a>
-    <a href="projetos.html">Projetos</a>
-    <a href="contatos.html">Contato</a>
-        </nav>
+    <header id="headerId">
+       
 
-     </header>
+    </header>
 
      <main>
     <h1> Projetos </h1>
