--- a/HTML/contatos.html
+++ b/HTML/contatos.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="../CSS/reset.css">
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="/CSS/reset.css">
+    <link rel="stylesheet" href="/CSS/style.css">
 </head>
 <body>
     <header id="headerId">
@@ -18,5 +18,5 @@
     <h1> Contatos</h1>
 </main>
 </body>
-<script src="../HEADER/header.js"></script>
+<script src="/HEADER/header.js"></script>
 </html>
